# SupportBot

./: .gitignore  docker-compose.yaml  pyproject.toml
fastapi-supbot/: .env.template  bot.py  main.py  main_app.py  middleware.py
fastapi-supbot/alembic/versions/: 0d7523700261_create_main_tabels.py  4da35a7a9032_add_current_chat_id_field_into_admins_.py  7ad5e8ce8dc0_fix_some_columns.py  99bab890f86e_add_new_clomn_telegram_message_id_into_.py  99dd46910c53_create_external_id_field_in_users_table.py  a27acc8981b3_add_default_to_started_at.py  a322a61ae48f_remove_unique_in_message_sender_id.py  dc19c8f9d6ed_username_in_users_table_can_be_null.py  e1892cda59d4_add_default_to_users_table.py  e7c02a423dac_create_key_table_and_add_is_superuser_.py  ee4537a1b733_add_default_to_created_at_in_admin_table.py  f42d715fada0_add_column_delivered_in_messages_table.py  f6f288aba0d1_add_default_to_sent_at.py
fastapi-supbot/api/: __init__.py
fastapi-supbot/api/api_v1/: __init__.py  websockets.py
fastapi-supbot/callbacks/: admin_message_callback.py  super_user_menu_callback.py
fastapi-supbot/core/: bot_instance.py  config.py  connection_manager.py  text.py
fastapi-supbot/fsm/: admin_registration.py
fastapi-supbot/handlers/: __init__.py  admin_message.py  admin_register.py  superuser_menu.py
fastapi-supbot/keyboards/: __init__.py  admin_message_keyboad.py  superuser_keyboard.py
fastapi-supbot/services/: admin_repo.py  chat_repo.py  chat_service.py  key_repo.py  message_repo.py  user_repo.py
fastapi-supbot/static/: app.js  chat.html  styles.css
(+7 files in other folders)
