[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
fastapi = "^0.135.1"
uvicorn = {extras = ["standart"], version = "^0.41.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.48"}
